[package]
name = "parallelion"
version = "0.1.0"
authors = ["Xavier L'Heureux <xavier.lheureux@icloud.com>"]
edition = "2018"

[dependencies]
ion-shell = { git = "https://gitlab.redox-os.org/redox-os/ion" }
num_cpus = "0.2"
structopt = "0.2"
crossbeam-channel = "0.3"
chrono = "0.4"
indicatif = "0.11"

# logging
log = "0.4"
simplelog = "0.6"
